--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </form>
        </div>
       </header>
-      <main>
+      <main class="weather-main">
         <div class="current-weather">
           <div>
             <h1 class="current-city" id="current-city">Paris</h1>
