Changed windspeed & description using API response

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <div>
           <h1 class="current-city" id="current-city">Paris</h1>
           <p class="current-details">
-            <span id="current-date"></span>Saturday 11:39, moderate rain <br />
-            Humidity: <strong>87%</strong>,<br>Wind: <strong>7.2km/h</strong>
+            <span id="current-date">Saturday 11:39</span>, <span id = "description"></span><br />
+            Humidity: <span id ="humidity"></span>, <br>
+            Wind: <span id ="wind"></span>
           </p>
         </div>
         <div class="current-temperature">
